--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,7 @@ footer{
 }
 
 #form-nav ul{
+  user-select: none;
   list-style: none;
   width: 100%;
   height: 100%;
@@ -103,6 +104,7 @@ footer{
 
 #form-nav li:hover{
   background-color: #00919d;
+  transition: .1s;
   color: white;
 }
 
@@ -148,6 +150,10 @@ input[type=text], input[type=password]{
   width: 12% !important;
   margin: 0.5%;
   margin-top: none !important;
+}
+
+#login-message{
+  color: red;
 }
 
 .profile-container{
