--- a/src/App.css
+++ b/src/App.css
@@ -44,12 +44,13 @@ footer{
 }
 
 #bgvideo{
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 #video-container{
   position: fixed;
+  display: flex;
 }
 
 #logogif{
@@ -93,11 +94,16 @@ footer{
   list-style: none;
   width: 100%;
   height: 100%;
+  text-transform: uppercase;
+  font-size: 8px;
+  font-weight: bold;
+  letter-spacing: 3px;
 }
 
 #form-nav li{
-  display: inline-block;
-  
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   width: 33%;
   height: 100%;
 }
@@ -131,19 +137,28 @@ input[type=text], input[type=password]{
   border-bottom: 2px solid black;
   background-color: transparent;
   margin-bottom: 0px;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: 500;
+  letter-spacing: 2px;
 }
 
 .login-form input[type=submit]{
   background-color: black;
   color: white;
   border: none;
-  width: 5%;
+  float: right;
   height: 25px;
+  width: 20%;
   margin-top: 0;
 }
 
 .login-form input[type=submit]:hover{
   background-color: #00919d;
+}
+
+.submit-button-container{
+  width: 25%;
 }
 
 .input-half{
@@ -160,6 +175,13 @@ input[type=text], input[type=password]{
   width: 35%;
   transform: translateX(93%);
   text-align: left;
+}
+
+.profile-text p{
+  font-size: 12px;
+  user-select: none;
+  font-weight: 550;
+  letter-spacing: 0.6px;
 }
 
 .profile-container hr{
@@ -191,8 +213,10 @@ input[type=text], input[type=password]{
 
 
 .about-container p{
-  font-size: 15px;
+  font-size: 12px;
   user-select: none;
+  font-weight: 550;
+  letter-spacing: 0.6px;
 }
 
 .about-container hr{
@@ -329,5 +353,4 @@ textarea::-webkit-scrollbar{
   width: 50%;
   margin: none;
   padding: 0;
-  height: 12px;
 }
