--- a/src/App.css
+++ b/src/App.css
@@ -223,7 +223,7 @@ input[type=text]::placeholder, input[type=password]::placeholder{
 }
 
 #response-message{
-  color: red;
+  color: black;
   display: block;
 }
 
