--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,7 @@ footer{
 }
 
 .scrollbar-container{
+  overflow-x: scroll;
   overflow-y: hidden;
   display: inline-flex;
   align-items: center;
@@ -225,6 +226,7 @@ input[type=text]::placeholder, input[type=password]::placeholder{
 #response-message{
   color: black;
   display: block;
+  
 }
 
 .profile-container{
@@ -318,20 +320,51 @@ input[type=text]::placeholder, input[type=password]::placeholder{
   width: 100%;
   height: 10.5vw;
 }
+#project-biginput{
+  font-size: 30pt;
+  font-weight: 500;
+  height: 34pt;
+  width: 50%;
+  text-align: center;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #7f7f7f;
+}
 
-.project-container{
+#about-artwork{
+  text-transform: uppercase;
+  text-align: right;
+  font-weight: bold;
+  font-size: 13px;
+  margin: 5px;
+  letter-spacing: '2px'
+}
+
+#about-arrow-right{
+  width: 70%;
+  margin: 5px
+}
+.create-project-layout{
+  margin-top: 20px;
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 20% 3% 1fr 27%;
   grid-template-rows: 1fr;
-  grid-column-gap: 5px;
+  grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
 
-.project-container hr{
-  margin: 10px;
-  height: 2px;
-  background-color: gray;
-  border: none;
+.create-project-layout hr{
+  border: 1.5px solid #7f7f7f;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.set-artwork-cover{
+  width: 150px;
+  height: 150px;
+  border: 5px solid black;
+  border-radius: 20px 0 0 0;
+  float: right;
+  margin-top: 35px
 }
 
 #imgUpload{
@@ -340,7 +373,7 @@ input[type=text]::placeholder, input[type=password]::placeholder{
   height: 30vw;
   opacity: 0;
 }
-.upload-file-container{
+/* .upload-file-container{
   background-color: white;
   text-align: center;
 }
@@ -349,21 +382,41 @@ input[type=text]::placeholder, input[type=password]::placeholder{
   font-size: 10px;
   letter-spacing: 2px;
   font-weight: bold;
-}
+} */
 
-.create-project-tags{
-  width: 100%;
-  height: 15vw;
+.upload-file-container{
   background-color: white;
-  margin-left: 15px;
+  opacity: 0.8;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#set-artwork-title{
-  float: right;
+.upload-file-container input{
+  position: absolute;
+  background-color: red;
+  width: 50%;
+  height: 350px;
+  opacity: 0;
 }
-img#set-artwork-title{
-  margin: 5px;
-  height: 25px;
+
+.upload-file-container p{
+  font-weight: bold;
+  font-size: 12px;
+  pointer-events: none;
+  user-select: none;
+}
+
+.set-artwork-title-container{
+  display: flex;
+  align-items: top;
+  justify-content: right;
+}
+.set-artwork-title-container img{
+  height: 30px;
+  width: 30px;
+  margin-right: 5px;
 }
 
 textarea{
@@ -381,16 +434,6 @@ textarea{
 
 textarea::-webkit-scrollbar{
   width: 0px;
-}
-
-.add-cover-image{
-  border: 5px solid black;
-  border-radius: 25px 0 0 0;
-  float: right;
-  position: relative;
-  width: 150px;
-  height: 150px;
-  margin: 10px;
 }
 
 #upload-p-container{
