--- a/src/App.css
+++ b/src/App.css
@@ -324,13 +324,17 @@ input[type=text]::placeholder, input[type=password]::placeholder{
   height: 10.5vw;
 }
 #project-biginput{
-  font-size: 30pt;
+  font-size: 28pt;
   font-weight: 500;
   height: 34pt;
   width: 50%;
   text-align: center;
   padding-bottom: 10px;
   border-bottom: 2px solid #7f7f7f;
+}
+
+input::placeholder#biginput{
+  font-size: 30pt;
 }
 
 #about-artwork{
@@ -347,12 +351,6 @@ input[type=text]::placeholder, input[type=password]::placeholder{
   margin: 5px
 }
 
-#add-button-container{
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
 #add-art-button{
   width: 50px;
   height: 50px;
@@ -360,12 +358,19 @@ input[type=text]::placeholder, input[type=password]::placeholder{
   background-size: cover;
   border: 5px solid black;
   margin: auto;
+  margin-bottom: 20px;
+}
+
+#add-art-button:hover{
+  border: 5px solid #00919d;
+  background-image: url('./assets/createProject/addButtonHover.png');
+  transition: .1s;
 }
 
 .create-project-layout{
   margin-top: 20px;
   display: grid;
-  grid-template-columns: 20% 3% 1fr 27%;
+  grid-template-columns: 25% 3% 44% 28%;
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
@@ -412,9 +417,13 @@ input[type=text]::placeholder, input[type=password]::placeholder{
   align-items: center;
 }
 
+.upload-file-container:hover{
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.3);  
+  transition: .1s;
+}
+
 .upload-file-container input{
   position: absolute;
-  background-color: red;
   width: 50%;
   height: 350px;
   opacity: 0;
@@ -448,6 +457,7 @@ textarea{
   float: right;
   width: 60%;
   margin-top: 20px;
+  resize: none;
 }
 
 textarea::-webkit-scrollbar{
