--- a/src/App.css
+++ b/src/App.css
@@ -370,7 +370,7 @@ input::placeholder#biginput{
   font-weight: bold;
   font-size: 13px;
   margin: 5px;
-  letter-spacing: 2px
+  letter-spacing: 2px;
 }
 
 #about-arrow-right{
@@ -535,4 +535,20 @@ textarea::-webkit-scrollbar{
 
 input::placeholder#update-profile{
   color: red;
+}
+
+#project-no-image-placeholder{
+  width: 100%;
+  height: 350px;
+  background-color: rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#about-artwork-content{
+  float: right;
+  text-align: right;
+  width: 60%;
+  margin-top: 20px;
 }
