profile is now responsive

--- a/src/css/tablet.css
+++ b/src/css/tablet.css
@@ -32,4 +32,43 @@
     .input-half{
         width: 34.5% !important;
     }
+
+    
+    .profile-container{
+        width: 70%;
+        transform: translateX(0%);
+        margin: auto;
+    }
+
+    .profile-picture-container{
+        background-position: center;
+        margin-right: 20px;
+        width: 29vw;
+        height: 29vw;
+        margin-bottom: 20px;
+    }
+
+    .profile-container h1{
+        text-align: center;
+    }
+
+    .projects-container{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+      }
+
+    .project{
+        border: 5px solid black;
+        width: 100%;
+        height: 21vw;
+      }
+
+      .project p{
+        font-size: 12px;
+      }
+
+      #create-project{
+        height: 21vw;
+      }
 }
