--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ footer{
   margin: auto;
   margin-top: 30px;
   left: 0;
-  bottom: 0;
+  top: 0;
   height: 80px;
   width: 100%;
   text-align: center;
@@ -259,8 +259,8 @@ input[type=text]::placeholder, input[type=password]::placeholder{
 }
 
 #profile-picture{
-  height: 150px;
-  width: 150px;
+  height: 100%;
+  width: 100%;
 }
 .profile-picture-container:hover{
   transition: .1s;
