--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,28 @@
   src: url('./assets/fonts/Capitana\ Bold.ttf');
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+  
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 2px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
 *{
   margin: 0;
   padding: 0;
