--- a/src/css/tablet.css
+++ b/src/css/tablet.css
@@ -100,6 +100,10 @@
         grid-row-gap: 0px;
     }
 
+    #about-artwork{
+        font-size: 11px;
+    }
+
     #about-artwork-content{
         float: right;
         text-align: right;
@@ -110,7 +114,7 @@
 
     .about-artwork-container{
         position: absolute;
-        height: 80%;
+        height: 90%;
         overflow: auto;
         bottom: 0;
     }
