--- a/src/css/small-desktop.css
+++ b/src/css/small-desktop.css
@@ -1,5 +1,21 @@
 @media (min-width: 769px) and (max-width: 1200px) {
 
+    body:before {
+        content: "";
+        display: block;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -10;
+        background: url('../assets/bkg_pix.jpg') no-repeat center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
+      
     .forms-container {
         margin-top: 0px;
     }
